--- a/Library-api/package.json
+++ b/Library-api/package.json
@@ -13,6 +13,8 @@
     "express": "~4.14.0",
     "mongoose": "^4.7.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "cors": "^2.8.0",
+    "method-override": "^2.3.6"
   }
 }
